# arpfisch

./: Cargo.toml  README.md
src/: .rustfmt.toml  application.rs  arpeggiator.rs  driver.rs  gui.rs  jack_driver.rs  main.rs  midi.rs  tempo_detector.rs
src/driver/: jack.rs  mod.rs
src/grid_controllers/: launchpad_x.rs  mod.rs
src/gui/: clock_division.rs  config.rs  edit.rs  mod.rs  pattern_select.rs  routing.rs  scale_select.rs  sliders.rs
