[package]
name = "arpfisch"
version = "0.1.0"
authors = ["Florian Jung <flo@windfis.ch>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = { git = "https://github.com/Windfisch/rust-jack" }
ringbuf = "0.2.1"
heapless = "0.6.1"
itertools = "0.10.0"
